fix: time selector overflow

--- a/src/app/modules/entry-live/views/live-discovery-chart/time-selector/time-selector.component.scss
+++ b/src/app/modules/entry-live/views/live-discovery-chart/time-selector/time-selector.component.scss
@@ -61,6 +61,7 @@
   .kFilters {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 
     &.kPreset {
       display: flex;
